[package]
name = "align-cli"
version = "0.4.0"
edition = "2021"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
description = "A command line interface for easily aligning sequences."
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/align-cli"
readme = "README.md"
include = ["inc/**/*", "src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "align"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2"
itertools = "0.13"
rayon = "1.10"
rustyms = "0.9.0-alpha.1"

[patch.crates-io]
rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "main" }

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
