[package]
name = "align-cli"
version = "0.4.1"
edition = "2024"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
description = "A command line interface for easily aligning sequences."
license = "MIT OR Apache-2.0"
repository = "https://github.com/snijderlab/align-cli"
readme = "README.md"
include = ["inc/**/*", "src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "align"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3"
itertools = "0.14"
rayon = "1.10"
rustyms = { version = "0.10.0", default-features = false, features = [
    "imgt",
    "align",
    "identification",
    "rayon",
    "isotopes",
] }

[patch.crates-io]
rustyms = { path = "../mzcore/rustyms" }

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
